[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/light-field.png" type="Texture" id=1]
[ext_resource path="res://src/actors/scripts/Lights/StaticLight.gd" type="Script" id=2]

[node name="StaticLight" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 241 )
texture = ExtResource( 1 )

[node name="LightArea" type="Area2D" parent="." groups=[
"Light",
]]
monitorable = false
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LightArea"]
polygon = PoolVector2Array( -42, 0, -172, 368, -64, 472, 64, 472, 172, 368, 42, 0 )
[connection signal="body_entered" from="LightArea" to="." method="_on_LightArea_body_entered"]
[connection signal="body_exited" from="LightArea" to="." method="_on_LightArea_body_exited"]
